UPDATE js files

--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 		</div>					
 	</footer>
 	<!-- footer -->	
-	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>	
+	<script src="js/jquery-1.12.4.min.js"></script>
+	<script src="js/slick.min.js"></script>	
     <script type="text/javascript">
     /* Window scroll option */
     resizeOption();
